[package]
name = "rs-sb3"
version = "0.1.0"
edition = "2021"
author = ["Multirious"]
description = "Rust crate for deserialize and serializing .sb3 format the Scratch 3 project format."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "0.1.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_repr = "0.1.9"
serde_tuple = "0.5.0"
thiserror = "1.0.37"
