[package]
name = "rs-sb3"
version = "0.5.0"
edition = "2021"
authors = ["Multirious"]
description = "sb3 json serializer"
readme = "README.md"
repository = "https://github.com/Multirious/rs-sb3/"
license = "MIT"
categories = ["parsing"]
keywords = ["scratch", "sb3", "serde", "serialization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_repr = "0.1.9"
serde_tuple = "0.5.0"
