[package]
name = "test_gen"
version = "0.1.0"
edition = "2021"
authors = ["Multirious"]
descriptiong = "Crate to generate test from biggggg big json file for rs-sb3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
thiserror = "1.0.37"
toml = "0.5.9"
